/*
    GSP for the TF blockchain game
    Copyright (C) 2020  Autonomous Worlds Ltd

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.
*/

syntax = "proto2";
option cc_enable_arenas = true;

package pxd.proto;

message Deconstruction
{
  optional uint32 DeconstructionId = 1;  

  optional string CandyType = 2;  
  
  optional uint32 Quantity = 3;   
}

message ActivityRewardInstance
{
  optional uint32 TournamentId = 1;
  
  optional string ExpeditionId = 2;  
  
  optional uint32 SweetenerId = 3;   

  optional uint32 GeneratedRecipeId = 4; 

  optional string RewardId = 5;

  optional uint32 PositionInTable = 6; 

  optional uint32 FighterID = 7;  
  
  optional string RewardAutoTableId = 8;
  
  repeated Deconstruction Deconstructions = 9;
}

